Fix for navbar covered by scrollbar

--- a/kujira/app/styles/navbar.scss
+++ b/kujira/app/styles/navbar.scss
@@ -41,3 +41,6 @@
   color: #f09b22 !important;
   background: #1b1b1b !important;
 }
+ul.nav.navbar-nav.navbar-right {
+  margin-right: 0;
+}
